performance optimization - reducing a lot of useless queries