@@ -4,23 +4,15 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import root.business.abstracts.AbstractDtoToVOConverter;
 import root.business.ingredient.IngredientDtoToVOConverter;
-import root.business.ingredient.IngredientService;
 
-import static java.util.stream.Collectors.toList;
+import java.util.stream.Collectors;
 
 
 @Component
 public class DishDtoToVOConverter extends AbstractDtoToVOConverter<DishDto, DishVO> {
 
-    private IngredientDtoToVOConverter ingredientDtoToVOConverter;
-    private IngredientService ingredientService;
-
     @Autowired
-    public DishDtoToVOConverter(IngredientDtoToVOConverter ingredientDtoToVOConverter, IngredientService
-            ingredientService) {
-        this.ingredientDtoToVOConverter = ingredientDtoToVOConverter;
-        this.ingredientService = ingredientService;
-    }
+    private IngredientDtoToVOConverter ingredientDtoToVOConverter;
 
     @Override
     public DishVO convert(DishDto dto) {
@@ -30,8 +22,8 @@ public class DishDtoToVOConverter extends AbstractDtoToVOConverter<DishDto, Dish
         vo.setPrice(dto.getPrice());
         vo.setImagePath(dto.getImagePath());
         vo.setDescription(dto.getDescription());
-        vo.setIngredients(dto.getIngredients().stream().map(integer -> this.ingredientService.getIngredientById
-                (integer)).map(ingredientDtoToVOConverter::convert).collect(toList()));
+        vo.setIngredients(dto.getIngredients().stream().map(ingredientDtoToVOConverter::convert).collect(Collectors
+                .toList()));
         vo.setCategory(dto.getCategory());
         return vo;
     }
